--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ProyectoAvaluos</string>
+    <string name="folio">AVXXXXXXXX</string>
+    <string name="total">$X,XXX,XXX.XX</string>
+    <string name="empresa">HomeCheck</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
